restyled header search bar

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('./styles/variables.css');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sora:wght@100..800&display=swap');
 
 @tailwind base;
@@ -12,6 +13,22 @@
   font-family: 'Sora', sans-serif;
 }
 
-input{
+input, select{
   outline: none;
+  background: transparent;
 }
+
+.app-gray-color {
+  background: var(--app-gray);
+}
+
+.search-input-behaviour {
+  background: var(--app-gray);
+  border: 2.5px solid var(--app-gray)
+}
+
+.search-input-behaviour:hover {
+  border: 2.5px solid rgb(206, 192, 0);
+  background: transparent;
+}
+
