style: placed hover to custom app gray color class

--- a/src/index.css
+++ b/src/index.css
@@ -25,11 +25,11 @@ body {
   overflow-x: hidden;
 }
 
-.app-gray-color, .hover-app-gray-color {
+.app-gray-color, .hover-app-gray-color:hover {
   background: var(--app-gray);
 }
 
-.hover-dark-app-gray-color, .dark-app-gray-color {
+.hover-dark-app-gray-color:hover, .dark-app-gray-color {
   background: var(--dark-app-gray);
 }
 
