--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,6 @@ body {
 }
 
 .form-grid-signup, .form-grid-login {
-  display: grid;
   width: 100vw;
   height: 100vh;
   overflow: hidden;
@@ -64,3 +63,5 @@ body {
 .country-phone-input-grid {
   grid-template-columns: 1fr 0.2fr 0.9fr;
 }
+
+@media and (max-width:  )
